--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <h4 style="margin-top: 100px;">The following textarea shows the fetched data:</h4>
     <div class="container">
-        <textarea id="KITarget" cols="100" style="background-color: #f1f1f1; border: none; margin: auto;"></textarea>
+        <textarea id="RKITarget" cols="100" style="background-color: #f1f1f1; border: none; margin: auto;"></textarea>
     </div>
     <script>
         const rkiFetcher = new RKIFetcher("Düsseldorf");
