--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="RKIFetcher.js"></script>
   </head>
+  <style>
+      .card>*, .card {
+          border-radius: 0px !important;
+      }
+
+      .card-header {
+          background-color: #343a40 !important;
+          color: white;
+      }
+  </style>
   <body style="text-align: center;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <a class="navbar-brand text-white">RKI Fetcher</a>
@@ -37,6 +47,51 @@
             <button class="btn btn-primary" type="submit" id="display">Anzeigen</button>
         </form>
         <textarea id="RKITarget" cols="100" style="background-color: #f1f1f1; border: none; margin: auto;"></textarea>
+    </div>
+    <div class="row" style="padding: 24px;">
+        <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Header
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Title</h5>
+                    <p class="card-text">Content</p>
+                </div>
+                <div class="card-footer">
+                    Footer
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Header
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Title</h5>
+                    <p class="card-text">Content</p>
+                </div>
+                <div class="card-footer">
+                    Footer
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Header
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Title</h5>
+                    <p class="card-text">Content</p>
+                </div>
+                <div class="card-footer">
+                    Footer
+                </div>
+            </div>
+        </div>
+        
     </div>
     <script>
         const submitForm = document.querySelector("#display");
