--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   src="https://code.jquery.com/jquery-3.6.0.js"
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="../QueryResultRenderer.js"></script>
-    <script src="../LandkreisPictureQuery.js"></script>
-    <script src="../RKIFetcher.js"></script>
+    <link rel="stylesheet" href="src/css/style.css">
+    <script src="src/QueryResultRenderer.js"></script>
+    <script src="src/LandkreisPictureQuery.js"></script>
+    <script src="src/RKIFetcher.js"></script>
   </head>
   <style>
       
