--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
 
         <div id="shareAndAPI">
-            <h6>Teile dieses Ergebnis mit deinen Freunden oder deiner Familie:</h6>
+            <h6>Teile diese Statistik mit deinen Freunden oder deiner Familie:</h6>
             <button class="btn btn-primary" type="button" style="padding-left: 64px; padding-right: 64px;" id="shareButton"><i class="fa fa-users" aria-hidden="true"></i> Teilen</button>
             <br>
             <br>
