add stats for germany

--- a/index.html
+++ b/index.html
@@ -126,6 +126,22 @@
             </div>
         </div>
 
+
+        <h4 id="hotspotTitle">Statistik für Deutschland:</h4>
+
+        <div class="card">
+            <div class="card-header">
+                Informationen
+                <a class="close-card" href="#" rel="noopener noreferrer"><i class="fa fa-window-close" aria-hidden="true" style="color: white; float: right;"></i></a>
+            </div>
+            <div class="card-body">
+                <p class="card-text" id="countryIncidency"></p>
+                <p class="card-text" id="countryCases"></p>
+                <p class="card-text" id="countryDeaths"></p>
+                <p class="card-text" id="countrySurvivalRate"></p>
+            </div>
+        </div>
+
         <h4 id="hotspotTitle">Derzeitige Corona Hotspots:</h4>
                 <div class="card-deck" id="hotspots">
                     
