--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>qovid | Aktuelle Statistiken, schnell und einfach!</title>
+    <title>qovis | Aktuelle Statistiken, schnell und einfach!</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -23,7 +23,7 @@
   </style>
   <body>
     <nav id="nav-top" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand text-white">qovid</a>
+        <a class="navbar-brand text-white">qovis</a>
         <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,7 +48,7 @@
     </nav>
 
     <div class="container">
-        <h1 id="title"><span class="text-primary">q</span>ovid</h1>
+        <h1 id="title"><span class="text-primary">q</span>ovis</h1>
         <h6>Aktuelle Corona-Statistiken, schnell und einfach!</h6>
         <hr>
         <form method="get" action="">
