--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </style>
   <body>
     <nav id="nav-top" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand text-white">qovis</a>
+        <a class="navbar-brand text-white"><span class="text-primary">q</span>ovis</a>
         <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
