--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" type="image/png" href="favicon.png" sizes="96x96">
+    <meta name="description" content="(qovis: Quick COVID Statistics) Diese Website dient dem Zweck einen einfachen Überblick über die Corona Statistiken im eigenen Landkreis, oder dem, welchen Sie als nächsten einen Besuch abstatten, auf einen Blick zu sehen. Außerdem erhalten Sie die Möglichkeit in den Deutschlandvergleich zu schauen, bzw direkt auf die Statistiken der benachbarten Landkreise zuzugreifen.">
+    <meta name="keywords" content="Corona,covid19,statistic,statistik,robert-koch-institut,robert,koch,inzidenz,deutschland,nrw,nordrhein-westfalen,bayern,berlin,massnahmen,maßnahmen,ausgangssperre,deutschland,seriös">
+    <meta name="author" content="Marco Steinke">
+    <meta name="robots" content="Sitemap: https://qovis.steinke-it.com
+    User-Agent: AdsBot-Google
+    Allow:/
+    User-Agent: *
+    Allow:/
+    ">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
