--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/css/style.css">
+    <script src="src/LandkreisDB.js"></script>
     <script src="src/QueryResultRenderer.js"></script>
     <script src="src/LandkreisPictureQuery.js"></script>
     <script src="src/RKIFetcher.js"></script>
