add better display for incidency and cases

--- a/index.html
+++ b/index.html
@@ -82,6 +82,25 @@
         <img id="landkreisImage" src="" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
         <label for="landKreisImage" id="imageLabel"></label>
         <h4 id="landkreisTitle"></h4>
+        <div id="main-statistic-display">
+            <div class="row" style="align-content: space-around;">
+                <div class="col">
+                    <div style="text-align: center;">
+                        <h2 id="main-incidency-display" class="main-value">143</h2>
+                        <h4 class="text-secondary">Inzidenz</h4>
+                    </div>
+                </div>
+                <div class="col">
+                    <div style="text-align: center;">
+                        <h2 id="main-cases-display" class="main-value">695</h2>
+                        <h4 class="text-secondary">Fälle</h4>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="text-secondary">(in den letzten 7 Tagen)</div>
+        </div>
 
         <div class="row" id="card-row">
             <div class="col">
