improve bottom nav

--- a/index.html
+++ b/index.html
@@ -209,13 +209,10 @@
         </div>
 
         <nav class="navbar navbar-dark bg-secondary" id="bottomnav">
-            <a class="navbar-brand text-white">RKI Fetcher</a>
-            <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div id="my-nav" class="collapse navbar-collapse">
+            <a class="navbar-brand text-white"><span class="text-primary">q</span>ovis</a>
+            <div id="my-nav" class="">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://www.github.com/MarcoSteinke/RKI-Fetcher">GitHub <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
