--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <script src="src/QueryResultRenderer.js"></script>
     <script src="src/LandkreisPictureQuery.js"></script>
     <script src="src/RKIFetcher.js"></script>
-    
   </head>
   <style>
       
@@ -231,7 +230,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
     <script>
         dialog = bootbox.dialog({
-            message: '<p class="text-center mb-0"><i class="fa fa-spin fa-cog"></i> Lade Daten des RKI...</p>',
+            message: '<p class="text-center mb-0"><i class="fa fa-spin fa-cog"></i><br> Lade Daten des RKI...</p>',
             closeButton: false
         });
     </script>
