--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,7 +54,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#safestTitle">Niedrige Inzidenz</a>
                 </li>
-                
+                <li class="nav-item active">
+                    <a class="nav-link" href="features.html">Features</a>
+                </li>
                 
             </ul>
         </div>
